# outlook-for-linux

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: CI.yml  release.yml
client/: index.html  offline.html  package-lock.json  package.json  vite.config.js
client/src/: download-hook.js  main.js  notification-extractor.js  notification.js  notification.test.js  url-change.js
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  store.rs  window.rs
snap/: snapcraft.yaml
