[package]
name = "OutlookClient"
version = "0.1.0"
description = "An unofficial Linux desktop wrapper for Microsoft Outlook built with Tauri."
authors = ["maxiking445"]
license = "GPL 3.0"
repository = "https://github.com/maxiking445/outlook-for-linux"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
futures = "0.3"
tauri-plugin-dialog = "2"
base64 = "0.22.1"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-store = "2.4.2"
